# wasm-bindings

./: .gitignore  0.bootstrap.js  Cargo.toml  Makefile  README.md  bootstrap.js  build.mk  index.html  lib-ruby-parser.js  lib-ruby-parser.wasm  package.json
.github/workflows/: gh-pages.yml  release.yml  shared-build-and-test.yml  test.yml
benchmark/: build.mk  node-wasm-parser.js  web-wasm-parser.js
bindings/: Cargo.toml
bindings/src/: lib.rs
codegen/: build.mk
codegen/codegen/: fns.rs  messages_js.rs  messages_rs.rs  mod.rs  nodes_js.rs  nodes_rs.rs
gh-pages/: build.mk  demo.js  index.html
js/: types.js
src/: lib.rs
tests/: build.mk  index.html  server.js  test-node.js  test-web.js
web/: index.js  package.json
