[package]
authors = ["Ilya Bylich <ibylich@gmail.com>"]
edition = "2018"
name = "wasm-bindings"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
lib-ruby-parser = "0.2.0"
wasm-bindgen = "0.2"
